# DockSight-AI

./: .env.example  .gitignore  ADVANCED_FEATURES_GUIDE.md  COMPREHENSIVE_TEST_GUIDE.md  FEATURES_IMPLEMENTATION_COMPLETE.md  HISTORY_FEATURE_GUIDE.md  HISTORY_FIX_VERIFICATION.md  HISTORY_QUICK_START.md  IMPLEMENTATION_COMPLETE_HISTORY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LARGE_DATASET_SUMMARY.md  PHASE1_ENHANCEMENTS.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_ADVANCED.md  QUICK_TEST.md  README.md  SOLANA_INTEGRATION.md  SOLANA_QUICK_REFERENCE.md  TEST_GUIDE.md  UI_ENHANCEMENTS_COMPLETE.md  UPLOAD_THESE_FILES.md  VERIFICATION.md  VISUAL_GUIDE.md  test_orchestrator.py  test_report_generation.py  test_solana_integration.py
backend/: config.py  main.py  requirements.txt  test_api.py
backend/agent/: orchestrator.py  rules.py  state_machine.py
backend/api/: routes.py
docs/: AGENT_RULES.md  ARCHITECTURE.md  EXECUTION_MODE.md  FEATURES.md  PROJECT_CONTEXT.md  REPO_STRUCTURE.md  TECH_STACK.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.jsx
prompts/: scientific_reasoning.md
sample_data/: README.md  amoxicillin.pdbqt  aspirin.pdbqt  atorvastatin.pdbqt  caffeine.pdbqt  compound_C.pdbqt  compound_D.pdbqt  ibuprofen.pdbqt  lisinopril.pdbqt  metformin.pdbqt  omeprazole.pdbqt  penicillin.pdbqt  sildenafil.pdbqt  warfarin.pdbqt
solana/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md
solana/programs/docksight-attestation/: Cargo.toml
solana/programs/docksight-attestation/src/: lib.rs
(+62 files in other folders)
