[package]
name = "docksight-attestation"
version = "0.1.0"
description = "DockSight AI attestation program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "docksight_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
